// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, cancelled 1`] = `
Object {
  "cancelled": true,
  "data": Array [
    Object {
      "cancelled": true,
    },
    Object {
      "cancelled": true,
    },
  ],
  "error": false,
  "fulfilled": false,
  "message": [Error: Cancelled useSelectorsResponse],
  "pending": false,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "cancelled": true,
      },
      Object {
        "cancelled": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, cancelled error 1`] = `
Object {
  "cancelled": false,
  "data": Array [
    Object {
      "error": true,
    },
  ],
  "error": true,
  "fulfilled": false,
  "message": [Error: useSelectorsResponse, {"error":true}],
  "pending": false,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "cancelled": true,
      },
      Object {
        "error": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, error 1`] = `
Object {
  "cancelled": false,
  "data": Array [
    Object {
      "error": true,
    },
    Object {
      "error": true,
    },
  ],
  "error": true,
  "fulfilled": false,
  "message": [Error: useSelectorsResponse, {"error":true}],
  "pending": false,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "error": true,
      },
      Object {
        "error": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, fulfilled 1`] = `
Object {
  "cancelled": false,
  "data": Array [
    Object {
      "fulfilled": true,
    },
    Object {
      "fulfilled": true,
    },
  ],
  "error": false,
  "fulfilled": true,
  "message": null,
  "pending": false,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "fulfilled": true,
      },
      Object {
        "fulfilled": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, fulfilled cancelled 1`] = `
Object {
  "cancelled": false,
  "data": Array [
    Object {
      "fulfilled": true,
    },
    Object {
      "cancelled": true,
    },
  ],
  "error": false,
  "fulfilled": true,
  "message": null,
  "pending": false,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "fulfilled": true,
      },
      Object {
        "cancelled": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, fulfilled error 1`] = `
Object {
  "cancelled": false,
  "data": Array [
    Object {
      "error": true,
    },
  ],
  "error": true,
  "fulfilled": false,
  "message": [Error: useSelectorsResponse, {"error":true}],
  "pending": false,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "fulfilled": true,
      },
      Object {
        "error": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, fulfilled pending 1`] = `
Object {
  "cancelled": false,
  "data": Array [],
  "error": false,
  "fulfilled": false,
  "message": null,
  "pending": true,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "fulfilled": true,
      },
      Object {
        "pending": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, pending 1`] = `
Object {
  "cancelled": false,
  "data": Array [],
  "error": false,
  "fulfilled": false,
  "message": null,
  "pending": true,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "pending": true,
      },
      Object {
        "pending": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, pending cancelled 1`] = `
Object {
  "cancelled": false,
  "data": Array [],
  "error": false,
  "fulfilled": false,
  "message": null,
  "pending": true,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "pending": true,
      },
      Object {
        "cancelled": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for aggregating multiple selector responses with useSelectorsResponse: aggregated calls, pending error 1`] = `
Object {
  "cancelled": false,
  "data": Array [
    Object {
      "error": true,
    },
  ],
  "error": true,
  "fulfilled": false,
  "message": [Error: useSelectorsResponse, {"error":true}],
  "pending": false,
  "responses": Object {
    "id": Object {},
    "list": Array [
      Object {
        "pending": true,
      },
      Object {
        "error": true,
      },
    ],
  },
}
`;

exports[`useReactRedux should apply a hook for useDispatch: dispatch 1`] = `
Array [
  Array [
    Object {
      "data": "ipsum",
      "type": "lorem",
    },
  ],
]
`;

exports[`useReactRedux should return specific properties: specific properties 1`] = `
Object {
  "shallowEqual": [Function],
  "useDispatch": [Function],
  "useSelector": [Function],
  "useSelectors": [Function],
  "useSelectorsAllSettledResponse": [Function],
  "useSelectorsAnyResponse": [Function],
  "useSelectorsRaceResponse": [Function],
  "useSelectorsResponse": [Function],
}
`;
